apps/base/jellyseerr/jellyseerr-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr-external
  namespace: jellyseerr
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80          # what CF tunnel will hit
      targetPort: 80    # Jellyseerr container listens on 80 in our Helm values
      protocol: TCP
  selector:
    app.kubernetes.io/instance: jellyseerr
    app.kubernetes.io/name: jellyseerr
    app.kubernetes.io/component: jellyseerr
