apps/base/jellyseerr/jellyseerr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr-ingressroute
  namespace: jellyseerr
  annotations:
    gethomepage.dev/href: "https://jellyseerr.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Jellyseerr"
    gethomepage.dev/description: "Open-source media request and discovery manager for Jellyfin/Plex"
    gethomepage.dev/app: jellyseerr
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/jellyseerr.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`jellyseerr.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: jellyseerr
          port: 80
